# throbber-widgets-tui

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  check
.github/workflows/: check.yaml  lint.yaml  pr-review.yaml  publish.yaml  test.yaml
examples/: demo.rs  no_std_demo.rs
src/: lib.rs  symbols.rs
src/widgets/: mod.rs  throbber.rs
tools/: check_readme.sh  publish_crate.sh  readme_lib.diff
