[package]
name = "throbber-widgets-tui"
#note: After updating the dependent crate, do +0.1.0
version = "0.9.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["arkbig"]
description = "This is a ratatui widget that displays throbber."
readme = "README.md"
documentation = "https://docs.rs/throbber-widgets-tui/latest/throbber_widgets_tui/"
repository = "https://github.com/arkbig/throbber-widgets-tui"
license = "Zlib"
keywords = ["tui", "widgets"]
categories = ["command-line-utilities"]

[features]
rand = ["dep:rand"]

[dependencies]
rand = { version = "0.9.2", optional = true }
ratatui = { version = "0.29.0", default-features = false }

[dev-dependencies]
ratatui = "0.29.0"
